--- a/style.scss
+++ b/style.scss
@@ -487,7 +487,6 @@ header {
     .x3,
     .x5 {
         width: max-content;
-        min-width: 30%;
         left: 50%;
         bottom: 10%;
         transform: translateX(-50%);
@@ -616,6 +615,7 @@ header {
     .x5 {
         bottom: 1rem;
         min-width: 50%;
+        width: fit-content;
     }
     .container {
         max-width: 90%;
@@ -636,8 +636,8 @@ header {
             width: 85%;
         }
         .placeholder {
-            width: 6.5rem;
-            height: 6.5rem;
+            width: 6rem;
+            height: 6rem;
         }
     }
     .bonus {
