--- a/style.scss
+++ b/style.scss
@@ -638,6 +638,7 @@ header {
         .placeholder {
             width: 6rem;
             height: 6rem;
+            margin-bottom: 4rem;
         }
     }
     .bonus {
