--- a/style.scss
+++ b/style.scss
@@ -640,6 +640,9 @@ header {
             height: 6rem;
             margin-bottom: 4rem;
         }
+        .item-choice {
+            margin-bottom: 2rem;
+        }
     }
     .bonus {
         padding: 0 1rem;
