--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Barlow Semi Condensed", sans-serif;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
   background: radial-gradient(circle at top, #1f3756, #141539);
 }
@@ -45,13 +46,14 @@ body {
 }
 
 .x5, .x3 {
-  right: 2rem;
-  bottom: 8rem;
+  right: 3%;
+  bottom: 14%;
+  width: 11rem;
 }
 
 .rules-btn {
-  bottom: 11.5rem;
-  right: 2rem;
+  bottom: 20%;
+  right: 3%;
 }
 
 .rules-container {
@@ -174,6 +176,12 @@ header {
 .score-card.updated {
   -webkit-animation: itemScale 0.7s ease;
           animation: itemScale 0.7s ease;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .container {
@@ -316,8 +324,8 @@ header {
   transition: width 0.5s ease , -webkit-transform 1.5s ease 2.5s;
   transition: width 0.5s ease , transform 1.5s ease 2.5s;
   transition: width 0.5s ease , transform 1.5s ease 2.5s , -webkit-transform 1.5s ease 2.5s;
-  -webkit-transform: translateY(-205%);
-          transform: translateY(-205%);
+  -webkit-transform: translateY(-215%);
+          transform: translateY(-215%);
   opacity: 1;
 }
 
@@ -443,7 +451,6 @@ header {
   -webkit-transform: translateX(-50%) translateZ(-1px);
           transform: translateX(-50%) translateZ(-1px);
   bottom: -0.4rem;
-  z-index: 0;
 }
 
 .item .item-inner {
@@ -473,7 +480,6 @@ header {
   -webkit-transform: translateX(-50%) translateZ(-1px);
           transform: translateX(-50%) translateZ(-1px);
   background: radial-gradient(#f2f2f2, #dadcdb);
-  z-index: -1;
 }
 
 .paper {
@@ -630,18 +636,15 @@ header {
     line-height: 3rem;
   }
   .rules-btn {
+    right: unset;
     left: 50%;
-    bottom: 9rem;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
   }
   .x3,
   .x5 {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
+    right: unset;
     left: 50%;
-    bottom: 6;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
   }
@@ -718,8 +721,8 @@ header {
     width: 60%;
   }
   .stage-1.open {
-    -webkit-transform: translateY(-230%);
-            transform: translateY(-230%);
+    -webkit-transform: translateY(-220%);
+            transform: translateY(-220%);
   }
   .stage-1 .placeholder {
     width: 8rem;
@@ -745,7 +748,7 @@ header {
     width: max-content;
   }
   .outcome {
-    top: 110%;
+    top: 100%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -777,17 +780,6 @@ header {
     top: 100%;
     right: 50%;
   }
-  .rules-btn {
-    bottom: 5rem;
-  }
-  .x3,
-  .x5 {
-    bottom: 2rem;
-    min-width: 50%;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
   .container {
     max-width: 90%;
     width: 85%;
@@ -817,8 +809,8 @@ header {
     height: 30vh;
   }
   .bonus.open {
-    -webkit-transform: translate(0, -145%);
-            transform: translate(0, -145%);
+    -webkit-transform: translate(0, -150%);
+            transform: translate(0, -150%);
   }
   .bonus .item {
     width: 6rem;
@@ -834,9 +826,11 @@ header {
   }
   .bonus .lizard {
     left: 15%;
+    bottom: -18%;
   }
   .bonus .rock {
     right: 15%;
+    bottom: -18%;
   }
 }
 
