--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,7 @@ $white : hsl(0, 0%, 95%);
 body {
     font-family: "Barlow Semi Condensed", sans-serif;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
     background: $bg;
 }
@@ -51,13 +52,14 @@ body {
     }
 }
 .x5, .x3 {
-    right: 2rem;
-    bottom: 8rem;
+    right: 3%;
+    bottom: 14%;
+    width: 11rem;
 }
 
 .rules-btn {
-    bottom: 11.5rem;
-    right: 2rem;
+    bottom: 20%;
+    right: 3%;
 }
 .rules-container {
     position: fixed;
@@ -154,6 +156,11 @@ header {
         animation: itemScale 0.7s ease;
     }
 }
+main {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
 .container {
     width: 44rem;
     max-width: 90%;
@@ -233,7 +240,7 @@ header {
     }
     &.open {
         transition: width 0.5s ease , transform 1.5s ease 2.5s;
-        transform: translateY(-205%);
+        transform: translateY(-215%);
         opacity: 1;
     }
     &.final {
@@ -334,7 +341,6 @@ header {
             left: 50%;
             transform: translateX(-50%) translateZ(-1px);
             bottom: -0.4rem;
-            z-index: 0;
     }
     .item-inner {
         position: absolute;
@@ -358,8 +364,6 @@ header {
             left: 50%;
             transform: translateX(-50%) translateZ(-1px);
             background:$innerCircle; 
-            z-index: -1;
-    
         }
     }
 }
@@ -483,15 +487,14 @@ header {
         }
     }
     .rules-btn {
+        right: unset;
         left: 50%;
-        bottom: 9rem;
         transform: translateX(-50%);
     }
     .x3,
     .x5 {
-        width: max-content;
+        right: unset;
         left: 50%;
-        bottom: 6;
         transform: translateX(-50%);
     }
     .container {
@@ -559,7 +562,7 @@ header {
             width: 60%;
         }
         &.open {
-            transform: translateY(-230%);
+            transform: translateY(-220%);
         }
         .placeholder {
             width: 8rem;
@@ -584,7 +587,7 @@ header {
         }
     }
     .outcome {
-        top: 110%;
+        top: 100%;
         align-items: center;
         span {
             width: max-content;
@@ -611,15 +614,13 @@ header {
             }
         }
     }
-    .rules-btn {
-        bottom: 5rem;
-    }
-    .x3,
-    .x5 {
-        bottom: 2rem;
-        min-width: 50%;
-        width: fit-content;
-    }
+    // .rules-btn {
+    //     bottom: 20%;
+    // }
+    // .x3,
+    // .x5 {
+    //     bottom: 12%;
+    // }
     .container {
         max-width: 90%;
         width: 85%;
@@ -649,7 +650,7 @@ header {
         height: 30vh;
         
         &.open {
-            transform: translate(0,-145%);
+            transform: translate(0,-150%);
         }
         .item {
             width: 6rem;
@@ -665,9 +666,11 @@ header {
         }
         .lizard {
             left: 15%;
+            bottom: -18%;
         }
         .rock {
             right: 15%;
+            bottom: -18%;
         }
     }
 }
@@ -699,7 +702,13 @@ header {
     }
     }
 }
+// //////////////@at-root
+// ////////////////////////@at-root
 
+
+
+
+// /////////////////
 @keyframes itemRotate {
     0% {
         transform: rotate(0deg);
