--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body {
     overflow: hidden;
     background: $bg;
 }
+
 .btn {
     position: fixed;
     background: transparent;
@@ -52,14 +53,14 @@ body {
     }
 }
 .x5, .x3 {
-    right: 3%;
-    bottom: 14%;
+    left: 85%;
+    top: 81%;
     width: 11rem;
 }
 
 .rules-btn {
-    bottom: 20%;
-    right: 3%;
+    top: 75%;
+    left: 85%;
 }
 .rules-container {
     position: fixed;
@@ -158,6 +159,7 @@ header {
 }
 main {
     width: 100%;
+    max-width: 100vw;
     height: 100%;
     position: relative;
 }
@@ -487,13 +489,11 @@ main {
         }
     }
     .rules-btn {
-        right: unset;
         left: 50%;
         transform: translateX(-50%);
     }
     .x3,
     .x5 {
-        right: unset;
         left: 50%;
         transform: translateX(-50%);
     }
@@ -614,13 +614,7 @@ main {
             }
         }
     }
-    // .rules-btn {
-    //     bottom: 20%;
-    // }
-    // .x3,
-    // .x5 {
-    //     bottom: 12%;
-    // }
+
     .container {
         max-width: 90%;
         width: 85%;
@@ -642,7 +636,7 @@ main {
         .placeholder {
             width: 6rem;
             height: 6rem;
-            margin-bottom: 4rem;
+            margin: 0;
         }
     }
     .bonus {
@@ -679,7 +673,7 @@ main {
         max-width: 98%;
     }
     .bonus {
-        height: 28vh;
+        
     .scissors {
         left: 35%;
         top: -22%;
@@ -702,13 +696,7 @@ main {
     }
     }
 }
-// //////////////@at-root
-// ////////////////////////@at-root
 
-
-
-
-// /////////////////
 @keyframes itemRotate {
     0% {
         transform: rotate(0deg);
