--- a/style.scss
+++ b/style.scss
@@ -237,7 +237,7 @@ main {
     &.step-1 {
         transition: width 0.5s ease , transform 1.5s ease 0.5s;
         .placeholder{
-            animation: itemScale 1s 3;
+            background-color: transparent;
         }
     }
     &.open {
