--- a/style.scss
+++ b/style.scss
@@ -161,6 +161,7 @@ main {
     width: 100%;
     max-width: 100vw;
     height: 100%;
+    max-height: 100vh;
     position: relative;
 }
 .container {
