--- a/style.css
+++ b/style.css
@@ -46,14 +46,14 @@ body {
 }
 
 .x5, .x3 {
-  left: 85%;
+  left: 80%;
   top: 81%;
   width: 11rem;
 }
 
 .rules-btn {
   top: 75%;
-  left: 85%;
+  left: 80%;
 }
 
 .rules-container {
@@ -181,8 +181,8 @@ header {
 main {
   width: 100%;
   max-width: 100vw;
-  height: 100%;
-  max-height: 100vh;
+  height: 80vh;
+  max-height: 80vh;
   position: relative;
 }
 
@@ -190,7 +190,9 @@ main {
   width: 44rem;
   max-width: 90%;
   height: 50vh;
-  margin: 3rem auto;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .original {
@@ -204,20 +206,19 @@ main {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 0 4rem;
-  -webkit-transition: -webkit-transform 1s ease 1.8s;
-  transition: -webkit-transform 1s ease 1.8s;
-  transition: transform 1s ease 1.8s;
-  transition: transform 1s ease 1.8s, -webkit-transform 1s ease 1.8s;
+  -webkit-transition: left 1s ease 1.8s;
+  transition: left 1s ease 1.8s;
+  left: 50%;
+  top: 30%;
 }
 
 .original.hidden {
-  -webkit-transform: translateX(-200%);
-          transform: translateX(-200%);
+  left: -200%;
 }
 
 .bonus {
-  -webkit-transform: translate(150%, -110%);
-          transform: translate(150%, -110%);
+  left: 200%;
+  top: 30%;
   background: url(./images/bg-pentagon.svg) no-repeat center center;
   display: -ms-grid;
   display: grid;
@@ -232,20 +233,16 @@ main {
   justify-items: center;
   padding: 0 6rem;
   opacity: 0;
-  -webkit-transition: opacity 5.5s ease, -webkit-transform 1s ease 0.5s;
-  transition: opacity 5.5s ease, -webkit-transform 1s ease 0.5s;
-  transition: transform 1s ease 0.5s, opacity 5.5s ease;
-  transition: transform 1s ease 0.5s, opacity 5.5s ease, -webkit-transform 1s ease 0.5s;
+  -webkit-transition: left 1s ease 0.5s, opacity 5.5s ease;
+  transition: left 1s ease 0.5s, opacity 5.5s ease;
 }
 
 .bonus.open {
-  -webkit-transform: translate(0, -110%);
-          transform: translate(0, -110%);
+  left: 50%;
+  top: 35%;
   opacity: 1;
-  -webkit-transition: opacity 1.5s ease, -webkit-transform 1s ease 1.5s;
-  transition: opacity 1.5s ease, -webkit-transform 1s ease 1.5s;
-  transition: transform 1s ease 1.5s, opacity 1.5s ease;
-  transition: transform 1s ease 1.5s, opacity 1.5s ease, -webkit-transform 1s ease 1.5s;
+  -webkit-transition: left 1s ease 1.5s, opacity 1.5s ease;
+  transition: left 1s ease 1.5s, opacity 1.5s ease;
 }
 
 .bonus .item {
@@ -294,8 +291,8 @@ main {
 }
 
 .stage-1 {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  left: 50%;
+  top: 300%;
   opacity: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -303,17 +300,14 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .stage-1.step-1 {
-  -webkit-transition: width 0.5s ease , -webkit-transform 1.5s ease 0.5s;
-  transition: width 0.5s ease , -webkit-transform 1.5s ease 0.5s;
-  transition: width 0.5s ease , transform 1.5s ease 0.5s;
-  transition: width 0.5s ease , transform 1.5s ease 0.5s , -webkit-transform 1.5s ease 0.5s;
+  -webkit-transition: width 0.5s ease , top 1.5s ease 0.5s;
+  transition: width 0.5s ease , top 1.5s ease 0.5s;
 }
 
 .stage-1.step-1 .placeholder {
@@ -322,12 +316,10 @@ main {
 }
 
 .stage-1.open {
-  -webkit-transition: width 0.5s ease , -webkit-transform 1.5s ease 2.5s;
-  transition: width 0.5s ease , -webkit-transform 1.5s ease 2.5s;
-  transition: width 0.5s ease , transform 1.5s ease 2.5s;
-  transition: width 0.5s ease , transform 1.5s ease 2.5s , -webkit-transform 1.5s ease 2.5s;
-  -webkit-transform: translateY(-215%);
-          transform: translateY(-215%);
+  -webkit-transition: width 0.5s ease , top 1.5s ease 2.5s;
+  transition: width 0.5s ease , top 1.5s ease 2.5s;
+  left: 50%;
+  top: 35%;
   opacity: 1;
 }
 
@@ -651,7 +643,6 @@ main {
             transform: translateX(-50%);
   }
   .container {
-    margin: 4rem auto;
     height: 40vh;
   }
   .original {
@@ -684,11 +675,10 @@ main {
     margin: 0;
   }
   .bonus {
-    position: relative;
     display: block;
     background-size: contain;
     padding: 0;
-    height: 35vh;
+    top: 35%;
   }
   .bonus .item {
     width: 7rem;
@@ -723,14 +713,12 @@ main {
     width: 60%;
   }
   .stage-1.open {
-    -webkit-transform: translateY(-220%);
-            transform: translateY(-220%);
+    left: 50%;
+    top: 25%;
   }
   .stage-1.step-1 {
-    -webkit-transition: width 0.5s ease , -webkit-transform 1.5s ease 0.5s;
-    transition: width 0.5s ease , -webkit-transform 1.5s ease 0.5s;
-    transition: width 0.5s ease , transform 1.5s ease 0.5s;
-    transition: width 0.5s ease , transform 1.5s ease 0.5s , -webkit-transform 1.5s ease 0.5s;
+    -webkit-transition: width 0.5s ease , top 1.5s ease 0.5s;
+    transition: width 0.5s ease , top 1.5s ease 0.5s;
   }
   .stage-1.step-1 .placeholder {
     background-color: transparent;
@@ -818,10 +806,6 @@ main {
   .bonus {
     padding: 0 1rem;
     height: 30vh;
-  }
-  .bonus.open {
-    -webkit-transform: translate(0, -150%);
-            transform: translate(0, -150%);
   }
   .bonus .item {
     width: 6rem;
