--- a/style.scss
+++ b/style.scss
@@ -53,14 +53,14 @@ body {
     }
 }
 .x5, .x3 {
-    left: 85%;
+    left: 80%;
     top: 81%;
     width: 11rem;
 }
 
 .rules-btn {
     top: 75%;
-    left: 85%;
+    left: 80%;
 }
 .rules-container {
     position: fixed;
@@ -160,15 +160,16 @@ header {
 main {
     width: 100%;
     max-width: 100vw;
-    height: 100%;
-    max-height: 100vh;
+    height: 80vh;
+    max-height: 80vh;
     position: relative;
 }
 .container {
     width: 44rem;
     max-width: 90%;
     height: 50vh;
-    margin: 3rem auto;
+    position: absolute;
+    transform: translate(-50%,-50%);
 }
 .original {
     background: url(./images/bg-triangle.svg) no-repeat center center;
@@ -176,13 +177,16 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     padding: 0 4rem;
-    transition: transform 1s ease 1.8s;
+    transition: left 1s ease 1.8s;
+    left: 50%;
+    top: 30%;
     &.hidden {
-        transform: translateX(-200%);
+        left: -200%;
     }
 }
 .bonus {
-    transform: translate(150%,-110%);
+    left: 200%;
+    top: 30%;
     background: url(./images/bg-pentagon.svg) no-repeat center center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -192,11 +196,12 @@ main {
     justify-items: center;
     padding: 0 6rem;
     opacity: 0;
-    transition: transform 1s ease 0.5s, opacity 5.5s ease;
+    transition: left 1s ease 0.5s, opacity 5.5s ease;
     &.open {
-        transform: translate(0,-110%);
+        left: 50%;
+        top: 35%;
         opacity: 1;
-        transition: transform 1s ease 1.5s, opacity 1.5s ease;
+        transition: left 1s ease 1.5s, opacity 1.5s ease;
     }
     .item {
         width: 9rem;
@@ -229,21 +234,22 @@ main {
     }
 }
 .stage-1 {
-    transform: translateY(0);
+    left: 50%;
+    top: 300%;
     opacity: 0;
     align-items: center;
     justify-content: space-between;
-    position: relative;
     display: flex;
     &.step-1 {
-        transition: width 0.5s ease , transform 1.5s ease 0.5s;
+        transition: width 0.5s ease , top 1.5s ease 0.5s;
         .placeholder{
             animation: itemScale 1s 3;
         }
     }
     &.open {
-        transition: width 0.5s ease , transform 1.5s ease 2.5s;
-        transform: translateY(-215%);
+        transition: width 0.5s ease , top 1.5s ease 2.5s;
+        left: 50%;
+        top: 35%;
         opacity: 1;
     }
     &.final {
@@ -500,7 +506,6 @@ main {
         transform: translateX(-50%);
     }
     .container {
-        margin: 4rem auto;
         height: 40vh;
     }
     .original {
@@ -526,11 +531,10 @@ main {
         margin: 0;
     }
     .bonus {
-        position: relative;
         display: block;
         background-size: contain;
         padding: 0;
-        height: 35vh;
+        top: 35%;
         .item{
             width: 7rem;
             height: 7rem;
@@ -564,10 +568,11 @@ main {
             width: 60%;
         }
         &.open {
-            transform: translateY(-220%);
+            left: 50%;
+            top: 25%;
         }
         &.step-1 {
-            transition: width 0.5s ease , transform 1.5s ease 0.5s;
+            transition: width 0.5s ease , top 1.5s ease 0.5s;
             .placeholder{
                 background-color: transparent;
             }
@@ -651,9 +656,6 @@ main {
         padding: 0 1rem;
         height: 30vh;
         
-        &.open {
-            transform: translate(0,-150%);
-        }
         .item {
             width: 6rem;
             height: 6rem;
