--- a/style.css
+++ b/style.css
@@ -30,10 +30,8 @@ body {
   padding: 0.6rem 2.2rem;
   cursor: pointer;
   z-index: 4;
-  -webkit-transition: -webkit-transform 1s ease 1s;
-  transition: -webkit-transform 1s ease 1s;
-  transition: transform 1s ease 1s;
-  transition: transform 1s ease 1s, -webkit-transform 1s ease 1s;
+  -webkit-transition: left 1s ease 1s;
+  transition: left 1s ease 1s;
 }
 
 .btn:active, .btn:focus {
@@ -41,8 +39,7 @@ body {
 }
 
 .btn.hidden {
-  -webkit-transform: translateX(300%);
-          transform: translateX(300%);
+  left: 300%;
 }
 
 .x5, .x3 {
