--- a/style.scss
+++ b/style.scss
@@ -54,12 +54,12 @@ body {
 }
 .x5, .x3 {
     left: 80%;
-    top: 81%;
+    top: 75%;
     width: 11rem;
 }
 
 .rules-btn {
-    top: 75%;
+    top: 68%;
     left: 80%;
 }
 .rules-container {
@@ -623,8 +623,11 @@ main {
             }
         }
     }
+    .rules-btn {
+        top: 70%;
+    }
     .x5, .x3 {
-        top: 85%;
+        top: 78%;
     }
     .container {
         max-width: 90%;
