--- a/style.css
+++ b/style.css
@@ -224,14 +224,38 @@ main {
   grid-column: 3;
 }
 
+.final .item-choice::after {
+  color: #fff;
+  color: #f2f2f2;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1.4rem;
+  letter-spacing: 4px;
+  width: 100%;
+  height: 1.4rem;
+  position: absolute;
+  top: -3em;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 .final .item-player {
   -ms-grid-column: 1;
   grid-column: 1;
 }
 
+.final .item-player::after {
+  content: 'You picked';
+}
+
 .final .item-comp {
   -ms-grid-column: 3;
   grid-column: 3;
+}
+
+.final .item-comp::after {
+  content: 'The house picked';
 }
 
 .final.step-1 .item-comp {
@@ -360,6 +384,7 @@ main {
 .item-choice {
   width: var(--sz-large);
   height: var(--sz-large);
+  position: relative;
 }
 
 .item {
@@ -655,6 +680,9 @@ main {
     padding: 0 3rem;
     background-size: 60%;
   }
+  .final .item-choice::after {
+    font-size: 1rem;
+  }
   .final.step-2 {
     width: 45rem;
   }
@@ -759,6 +787,10 @@ main {
   .final {
     padding: 0 3rem;
   }
+  .final .item-choice::after {
+    width: 130%;
+    font-size: 0.9rem;
+  }
   .final .pl-left,
   .final .pl-right {
     margin: 0.5rem 0 0rem 0.5rem;
@@ -848,6 +880,9 @@ main {
   }
   .final {
     padding: 0;
+  }
+  .final .item-choice::after {
+    font-size: 0.6rem;
   }
   .overlay .overlay-inner {
     width: 90%;
